--- a/ButtonsTextViewEditText/app/src/main/res/layout/activity_main.xml
+++ b/ButtonsTextViewEditText/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/enter_name_edt_id"
         android:layout_width="206dp"
         android:layout_height="47dp"
         android:layout_marginEnd="8dp"
@@ -33,12 +33,11 @@
         android:hint="@string/hint_name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/show_name_button_id"
         android:layout_width="196dp"
         android:layout_height="56dp"
         android:layout_marginEnd="8dp"
@@ -50,5 +49,19 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/enter_name_edt_id" />
+
+    <TextView
+        android:id="@+id/result_txt_id"
+        android:layout_width="270dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/show_name_button_id" />
 </android.support.constraint.ConstraintLayout>
