--- a/YourWeightOn/app/src/main/res/layout/activity_main.xml
+++ b/YourWeightOn/app/src/main/res/layout/activity_main.xml
@@ -21,35 +21,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/show_weight_button_id"
-        android:layout_width="195dp"
+    <!--<Button-->
+        <!--android:id="@+id/show_weight_button_id"-->
+        <!--android:layout_width="195dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="28dp"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--android:text="@string/show_weight"-->
+        <!--android:textColor="@android:color/background_light"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.502"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/weight_edit_text_id" />-->
+
+    <TextView
+        android:id="@+id/result_text_view_id"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/show_weight"
-        android:textColor="@android:color/background_light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weight_edit_text_id" />
-
-    <TextView
-        android:id="@+id/result_text_view_id"
-        android:layout_width="241dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/show_weight_button_id" />
+        app:layout_constraintTop_toBottomOf="@+id/weight_edit_text_id" />
 
     <EditText
         android:id="@+id/weight_edit_text_id"
