--- a/ShowNextActivity/app/src/main/res/layout/activity_second.xml
+++ b/ShowNextActivity/app/src/main/res/layout/activity_second.xml
@@ -7,7 +7,7 @@
     tools:context=".SecondActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/title_hello_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
