--- a/AnimalBio/app/src/main/res/layout/activity_details.xml
+++ b/AnimalBio/app/src/main/res/layout/activity_details.xml
@@ -4,31 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".DetailsActivity">
 
     <ImageView
-        android:id="@+id/lion_img_id"
-        android:layout_width="323dp"
-        android:layout_height="193dp"
-        android:layout_marginBottom="32dp"
+        android:id="@+id/detail_img_id"
+        android:layout_width="334dp"
+        android:layout_height="243dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/lion" />
-
-    <ImageView
-        android:id="@+id/cheeta_img_id"
-        android:layout_width="323dp"
-        android:layout_height="221dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cheetah" />
+
+    <TextView
+        android:id="@+id/description_text_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="307dp" />
 </android.support.constraint.ConstraintLayout>
