--- a/AnimalBio/app/src/main/res/layout/activity_details.xml
+++ b/AnimalBio/app/src/main/res/layout/activity_details.xml
@@ -19,13 +19,30 @@
         app:srcCompat="@drawable/cheetah" />
 
     <TextView
+        android:id="@+id/name_text_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detail_img_id" />
+
+    <TextView
         android:id="@+id/description_text_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="307dp" />
+        app:layout_constraintTop_toBottomOf="@+id/name_text_id" />
 </android.support.constraint.ConstraintLayout>
