--- a/RecyclerViewAppExercise/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewAppExercise/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:layout_height="432dp"
         android:layout_margin="10dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@id/button_new_element_id"
         app:layout_constraintEnd_toEndOf="parent"
