--- a/RecyclerViewTraining/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewTraining/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_id"
         android:layout_width="368dp"
         android:layout_height="495dp"
         app:layout_constraintBottom_toBottomOf="parent"
