Moving activity to especific package.
Adding new View to list shores.

--- a/ChoreApp/app/src/main/res/layout/activity_main.xml
+++ b/ChoreApp/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.createchore.MainActivity">
 
     <EditText
         android:id="@+id/enter_chore_edit_id"
