--- a/ChoreApp/app/src/main/res/layout/activity_chore_list.xml
+++ b/ChoreApp/app/src/main/res/layout/activity_chore_list.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".activity.listchores.ChoreListActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_chores_recycler_view_id"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
