--- a/ChoreApp/app/src/main/res/layout/chore_list_row.xml
+++ b/ChoreApp/app/src/main/res/layout/chore_list_row.xml
@@ -66,7 +66,7 @@
                 android:text="date: 12 April 2017"/>
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/list_edit_button_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
