--- a/RecipeFinderApp/app/src/main/res/values/styles.xml
+++ b/RecipeFinderApp/app/src/main/res/values/styles.xml
@@ -8,4 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="title_style">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="button_search_style">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/cardview_light_background</item>
+    </style>
+
 </resources>
