--- a/RecipeFinderApp/app/src/main/res/values/styles.xml
+++ b/RecipeFinderApp/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+    <resources>
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -21,4 +21,13 @@
         <item name="android:textColor">@color/cardview_light_background</item>
     </style>
 
-</resources>
+    <style name="row_recipe_title_style">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+        <style name="row_ingredient_text_style">
+            <item name="android:textSize">15sp</item>
+            <item name="android:textColor">@color/colorPrimary</item>
+        </style>
+
+    </resources>
