--- a/MyChatApp/app/src/main/res/layout/activity_login.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_login.xml
@@ -46,12 +46,12 @@
                     android:background="@drawable/selector_bg_edit_2"
                     android:hint="Enter Email"
                     android:inputType="textEmailAddress"
-                    android:paddingBottom="2dp"
                     android:textCursorDrawable="@drawable/bg_input_cursor_2"
                     android:textColor="@color/text_white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp"
+                    android:padding="10dp"/>
                 <EditText
                     android:id="@+id/login_password_edit_id"
                     android:layout_width="match_parent"
@@ -61,6 +61,7 @@
                     android:hint="Enter Password"
                     android:inputType="textPassword"
                     android:textSize="14sp"
+                    android:padding="10dp"
                     android:textColor="@color/text_white"
                     android:textCursorDrawable="@drawable/bg_input_cursor_2"/>
 
