--- a/MyChatApp/app/src/main/res/layout/activity_create_account.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_create_account.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg"
-    tools:context=".CreateAccountActivity">
+    tools:context=".activities.CreateAccountActivity">
     
     <android.support.v7.widget.CardView
         style="@style/login_card_view_style"
