--- a/MyChatApp/app/src/main/res/layout/activity_login.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".LoginActivity">
+    tools:context=".activities.LoginActivity">
 
     <android.support.v7.widget.CardView
         style="@style/login_card_view_style"
