--- a/MyChatApp/app/src/main/res/layout/activity_dashboard.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_dashboard.xml
@@ -8,6 +8,7 @@
 
 
     <android.support.design.widget.TabLayout
+        android:id="@+id/dashboard_main_tabs_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark">
