--- a/MotivationalApp/app/src/main/res/layout/activity_main.xml
+++ b/MotivationalApp/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:contentDescription="@string/app_logo" />
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/main_view_pager_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/lolli_logo_image_view_id">
